Header display changed to grid

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <a href="#">Лучшие из лучших</a>
             </div>
         </div>
+        <div class="different_links">
+            <a href="">Бестселлеры</a>
+            <a href="">Новинки</a>
+            <a href="">Книги</a>
+            <a href="">Канцтовары</a>
+        </div>
     </div>
 </main>
 <footer>
