Added some JS to display goods in catalog

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </header>
 <main>
     <div class="page_name">Книги</div>
+    <p id="out"></p>
 </main>
 <footer>
     <div class="footer_items">
@@ -65,3 +66,4 @@
 </footer>
 </body>
 </html>
+<script src="js/script.js"></script>
