Вывод каталога с помощью JS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,29 @@
 </header>
 <main>
     <div class="page_name">Книги</div>
-    <p id="out"></p>
+    <div class="middle">
+        <nav>
+            <h2>Категории</h2>
+            <ul class="navigation">
+                <li>
+                    <a href="">Художественная литература</a>
+                </li>
+                <li>
+                    <a href="">Для детей</a>
+                </li>
+                <li>
+                    <a href="">Образование</a>
+                </li>
+                <li>
+                    <a href="">Наука и техника</a>
+                </li>
+                <li>
+                    <a href="">Искусство</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="products"></div>
+    </div>
 </main>
 <footer>
     <div class="footer_items">
