--- a/html/author.html
+++ b/html/author.html
@@ -1,10 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Авторизация</title>
+    <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
 </head>
 <body>
+<header>
+    <div class="my_header">
+        <div class="head_elements">
+            <a href="../index.html"><img class="logo" src="../images/logo.svg" alt="logo"></a>
+            <input class="searchbar" type="text" placeholder="Поиск">
+            <a href="../html/registration.html.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
+            <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
+        </div>
+    </div>
+    <div class="top">
+        <div class="menu">
+            <div class="dropdown">
+                <button class="dropbtn">Каталог</button>
+                <div class="dropdown-content">
+                    <a href="#">Новинки литературы</a>
+                    <a href="#">Скоро в продаже</a>
+                    <a href="#">Лучшие из лучших</a>
+                </div>
+            </div>
+            <div class="different_links">
+                <a href="">Бестселлеры</a>
+                <a href="">Новинки</a>
+                <a href="">Книги</a>
+                <a href="">Канцтовары</a>
+            </div>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="page_name">Регистрация</div>
+    <div class="registration">
+        <div class="registration-objects">
+            <h2>Регистрация</h2>
+            <div>
+                <h3>Введите номер телефона</h3>
+                <input type="text" placeholder="Номер телефона">
+            </div>
+            <button class="btn-reg">Отправить СМС</button>
+            <a href="author.html">Зарегестрироваться?</a>
+        </div>
+    </div>
+</main>
+<a class="back_to_top" title="Наверх">↑</a>
+<footer>
+    <div class="footer_items">
+        <div class="info">
+            <a href="">Доставка</a>
+            <a href="">Оплата</a>
+        </div>
+        <div class="social">
+            <p>Соцсети</p>
+            <a href=""><img class="social_svg" src="../images/youtube.svg" alt="youtube"></a>
+            <a href=""><img class="social_svg" src="../images/vk.svg" alt="vk"></a>
+            <a href=""><img class="social_svg" src="../images/telegram.svg" alt="telegram"></a>
+
+        </div>
+        <div class="payment">
+            <p>Оплата</p>
+            <a href=""><img class="payment_svg" src="../images/visa.svg" alt="visa"></a>
+            <a href=""><img class="payment_svg" src="../images/mir.svg" alt="mir"></a>
+        </div>
+        <div class="contacts">
+            <p>Контактная информация</p>
+            <p>8 (123) 456 78 90</p>
+            <p>email@mail.com</p>
+        </div>
+
+    </div>
+</footer>
 
 </body>
+<script src="js/script.js"></script>
 </html>
