--- a/html/registration.html
+++ b/html/registration.html
@@ -11,7 +11,7 @@
         <div class="head_elements">
             <a href="../index.html"><img class="logo" src="../images/logo.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
-            <a href=""><img class="user_svg" src="../images/user.svg" alt="user"></a>
+            <a href="../html/registration.html.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
         </div>
     </div>
@@ -55,11 +55,12 @@
                 <h3>Фамилия</h3>
                 <input type="text" placeholder="Фамилия">
             </div>
-            <button>Зарегистрироваться</button>
+            <button class="btn-reg">Зарегистрироваться</button>
             <a href="author.html">Уже есть аккаунт?</a>
         </div>
     </div>
 </main>
+<a class="back_to_top" title="Наверх">↑</a>
 <footer>
     <div class="footer_items">
         <div class="info">
