--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
 
     </div>
+    <a class="back_to_top" title="Наверх">↑</a>
 </main>
 <footer>
     <div class="footer_items">
@@ -90,7 +91,7 @@
 
     </div>
 </footer>
-
 </body>
 <script src="js/script.js"></script>
+<script src="js/return_top.js"></script>
 </html>
