--- a/html/author.html
+++ b/html/author.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Авторизация</title>
     <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
@@ -11,7 +12,7 @@
         <div class="head_elements">
             <a href="../index.html"><img class="logo" src="../images/logo.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
-            <a href="../html/registration.html.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
+            <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
         </div>
     </div>
@@ -44,7 +45,7 @@
                 <input type="text" placeholder="Номер телефона">
             </div>
             <button class="btn-reg">Отправить СМС</button>
-            <a href="author.html">Зарегестрироваться?</a>
+            <a href="registration.html">Зарегестрироваться?</a>
         </div>
     </div>
 </main>
