--- a/html/author.html
+++ b/html/author.html
@@ -10,7 +10,7 @@
 <header>
     <div class="my_header">
         <div class="head_elements">
-            <a href="../index.html"><img class="logo" src="../images/logo.svg" alt="logo"></a>
+            <a href="../index.html"><img class="logo" src="../images/logo1.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
