--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <div class="my_header">
             <div class="head_elements">
-                <a href="../index.html"><img class="logo" src="../images/logo.svg" alt="logo"></a>
+                <a href="index.html"><img class="logo" src="images/logo.svg" alt="logo"></a>
                 <input class="searchbar" type="text" placeholder="Поиск">
-                <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
-                <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
+                <a href="html/registration.html"><img class="user_svg" src="images/user.svg" alt="user"></a>
+                <a href=""><img class="cart_svg" src="images/cart.svg" alt="cart"></a>
             </div>
         </div>
         <div class="top">
@@ -78,9 +78,9 @@
         </div>
         <div class="social">
             <p>Соцсети</p>
-            <a href=""><img class="social_svg" src="../images/youtube.svg" alt="youtube"></a>
-            <a href=""><img class="social_svg" src="../images/vk.svg" alt="vk"></a>
-            <a href=""><img class="social_svg" src="../images/telegram.svg" alt="telegram"></a>
+            <a href=""><img class="social_svg" src="images/youtube.svg" alt="youtube"></a>
+            <a href=""><img class="social_svg" src="images/vk.svg" alt="vk"></a>
+            <a href=""><img class="social_svg" src="images/telegram.svg" alt="telegram"></a>
 
         </div>
         <div class="payment">
