--- a/html/registration.html
+++ b/html/registration.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <title>Bookshop</title>
     <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
+    <link type="image/x-icon" href="/images/favicon.svg" rel="shortcut icon">
+    <link type="Image/x-icon" href="/images/favicon.svg" rel="icon">
 </head>
 <body>
 <header>
     <div class="my_header">
         <div class="head_elements">
-            <a href="../index.html"><img class="logo" src="../images/logo1.svg" alt="logo"></a>
+            <a href="../index.html"><img class="logo" src="../images/Logo.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
