--- a/html/item.html
+++ b/html/item.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bookshop</title>
-    <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
-    <link type="image/x-icon" href="/images/favicon.svg" rel="shortcut icon">
-    <link type="Image/x-icon" href="/images/favicon.svg" rel="icon">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
 <header>
@@ -14,7 +13,7 @@
             <a href="../index.html"><img class="logo" src="../images/Logo.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
-            <a href="../html/cart.html"><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
+            <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
         </div>
     </div>
     <div class="top">
@@ -37,17 +36,8 @@
     </div>
 </header>
 <main>
-    <div class="page_name">Регистрация</div>
-    <div class="registration">
-        <div class="registration-objects">
-            <h2>Регистрация</h2>
-            <div>
-                <h3>Введите номер телефона</h3>
-                <input type="text" placeholder="Номер телефона">
-            </div>
-            <button class="btn-reg">Отправить СМС</button>
-            <a href="registration.html">Зарегестрироваться?</a>
-        </div>
+    <div class="main-items">
+        <div class="page_name">Страница товара</div>
     </div>
 </main>
 <a class="back_to_top" title="Наверх">↑</a>
@@ -77,7 +67,5 @@
 
     </div>
 </footer>
-
 </body>
-<script src="js/script.js"></script>
 </html>
