--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="index.html"><img class="logo" src="images/logo.svg" alt="logo"></a>
                 <input class="searchbar" type="text" placeholder="Поиск">
                 <a href="html/registration.html"><img class="user_svg" src="images/user.svg" alt="user"></a>
-                <a href=""><img class="cart_svg" src="images/cart.svg" alt="cart"></a>
+                <a href="html/cart.html"><img class="cart_svg" src="images/cart.svg" alt="cart"></a>
             </div>
         </div>
         <div class="top">
