--- a/html/item.html
+++ b/html/item.html
@@ -5,6 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
+    <link type="image/x-icon" href="/images/favicon.svg" rel="shortcut icon">
+    <link type="Image/x-icon" href="/images/favicon.svg" rel="icon">
 </head>
 <body>
 <header>
@@ -39,6 +44,51 @@
     <div class="main-items">
         <div class="page_name">Страница товара</div>
     </div>
+    <div class="item_page">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100"
+                         src="https://ndc.book24.ru/resize/820x1192/iblock/5f7/5f7e85879836fdbfbbd60a1db68e7575/eedd8ea063e98afcd403217c5d65b731.jpg"
+                         alt="Первый слайд">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://cdn.book24.ru/v2/ITD000000001080342/COVER/cover4__w410.webp"
+                         alt="Второй слайд">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"
+                         src="https://ndc.book24.ru/resize/820x1192/iblock/4f5/4f5e31bbccdee04de50f488dce649203/a06724b4895476227b52e3428af610b3.jpg"
+                         alt="Третий слайд">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="item_info">Бессмертное творение одного из величайших немецких поэтов. Главный труд, который он писал
+            почти всю свою жизнь. Легенда об ученом, который продал душу дьяволу в обмен на его обещание открыть секреты
+            мироздания. Великая трагедия о цели человеческого бытия, о поиске смысла жизни. «Фауст» Гёте задает загадки,
+            и уже не одно поколение читателей пытается их разгадать.
+        </div>
+        <div class="buy_item">
+            <p>В наличии</p>
+            <p>Стоимость:</p>
+            <button class="buy">Купить</button>
+        </div>
+    </div>
+
+
 </main>
 <a class="back_to_top" title="Наверх">↑</a>
 <footer>
@@ -68,4 +118,15 @@
     </div>
 </footer>
 </body>
+<script src="../js/script.js"></script>
+<script src="../js/return_top.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </html>
