JS для корзины и открытия страницы

--- a/html/cart.html
+++ b/html/cart.html
@@ -41,7 +41,7 @@
 <main>
 <div class="main-items">
   <div class="page_name">Корзина</div>
-  <h1>Ваша корзина пуста</h1>
+  <div class="cart-prods" id="cart-products"></div>
 </div>
 </main>
 <a class="back_to_top" title="Наверх">↑</a>
@@ -71,6 +71,6 @@
 
   </div>
 </footer>
-
+<script src="../js/cart.js"></script>
 </body>
 </html>
