--- a/html/item.html
+++ b/html/item.html
@@ -87,6 +87,7 @@
             <button class="buy">Купить</button>
         </div>
     </div>
+    <div id="test"></div>
 
 
 </main>
@@ -118,7 +119,7 @@
     </div>
 </footer>
 </body>
-<script src="../js/script.js"></script>
+<script src="../js/item.js"></script>
 <script src="../js/return_top.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
