--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
 </footer>
 </body>
 <script src="js/script.js"></script>
+<script src="js/addtocart.js"></script>
 <script src="js/return_top.js"></script>
 </html>
