--- a/html/item.html
+++ b/html/item.html
@@ -44,48 +44,7 @@
     <div class="main-items">
         <div class="page_name">Страница товара</div>
     </div>
-    <div class="item_page">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100"
-                         src="https://ndc.book24.ru/resize/820x1192/iblock/5f7/5f7e85879836fdbfbbd60a1db68e7575/eedd8ea063e98afcd403217c5d65b731.jpg"
-                         alt="Первый слайд">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://cdn.book24.ru/v2/ITD000000001080342/COVER/cover4__w410.webp"
-                         alt="Второй слайд">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                         src="https://ndc.book24.ru/resize/820x1192/iblock/4f5/4f5e31bbccdee04de50f488dce649203/a06724b4895476227b52e3428af610b3.jpg"
-                         alt="Третий слайд">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-        <div class="item_info">Бессмертное творение одного из величайших немецких поэтов. Главный труд, который он писал
-            почти всю свою жизнь. Легенда об ученом, который продал душу дьяволу в обмен на его обещание открыть секреты
-            мироздания. Великая трагедия о цели человеческого бытия, о поиске смысла жизни. «Фауст» Гёте задает загадки,
-            и уже не одно поколение читателей пытается их разгадать.
-        </div>
-        <div class="buy_item">
-            <p>В наличии</p>
-            <p>Стоимость:</p>
-            <button class="buy">Купить</button>
-        </div>
+    <div class="my_item" id="item-page"></div>
     </div>
     <div id="test"></div>
 
