Добавление в корзину со страницы товара

--- a/html/item.html
+++ b/html/item.html
@@ -18,7 +18,7 @@
             <a href="../index.html"><img class="logo" src="../images/Logo.svg" alt="logo"></a>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
-            <a href=""><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
+            <a href="cart.html"><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
         </div>
     </div>
     <div class="top">
