--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                 <a href="index.html"><img class="logo" src="images/logo.svg" alt="logo"></a>
                 <input class="searchbar" type="text" placeholder="Поиск">
                 <a href="html/registration.html"><img class="user_svg" src="images/user.svg" alt="user"></a>
-                <a href="html/cart.html"><img class="cart_svg" src="images/cart.svg" alt="cart"></a>
+                <div class="korzina">
+                    <a href="html/cart.html"><img class="cart_svg" src="images/cart.svg" alt="cart"></a>
+                    <span class="counter">0</span>
+                </div>
+
             </div>
         </div>
         <div class="top">
@@ -68,6 +72,7 @@
 
         </div>
     </div>
+
     <a class="back_to_top" title="Наверх">↑</a>
 </div>
 <footer>
