--- a/html/item.html
+++ b/html/item.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Document</title>
+    <title>Страница товара</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
@@ -16,6 +16,18 @@
     <div class="my_header">
         <div class="head_elements">
             <a href="../index.html"><img class="logo" src="../images/Logo.svg" alt="logo"></a>
+            <div class="a-header">
+                <input type="checkbox" name="main-nav" id="main-nav" class="burger-check">
+                <label for="main-nav" class="burger menu"><span></span></label>
+                <ul>
+                    <li><a href="../index.html">Главная</a></li>
+                    <li><a href="../html/registration.html" class="active">Личный кабинет</a></li>
+                    <li><a href="#">Бестселлеры</a></li>
+                    <li><a href="#">Новинки</a></li>
+                    <li><a href="#">Книги</a></li>
+                    <li><a href="#">Канцтовары</a></li>
+                </ul>
+            </div>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <div class="korzina">
