--- a/html/registration.html
+++ b/html/registration.html
@@ -12,6 +12,18 @@
     <div class="my_header">
         <div class="head_elements">
             <a href="../index.html"><img class="logo" src="../images/Logo.svg" alt="logo"></a>
+            <div class="a-header">
+                <input type="checkbox" name="main-nav" id="main-nav" class="burger-check">
+                <label for="main-nav" class="burger menu"><span></span></label>
+                <ul>
+                    <li><a href="../index.html">Главная</a></li>
+                    <li><a href="../html/registration.html" class="active">Личный кабинет</a></li>
+                    <li><a href="#">Бестселлеры</a></li>
+                    <li><a href="#">Новинки</a></li>
+                    <li><a href="#">Книги</a></li>
+                    <li><a href="#">Канцтовары</a></li>
+                </ul>
+            </div>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
             <a href="../html/cart.html"><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
