--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><a href="#">Новинки</a></li>
                         <li><a href="#">Книги</a></li>
                         <li><a href="#">Канцтовары</a></li>
+                        <li><a href="#">Скидки</a></li>
                     </ul>
                 </div>
                 <input class="searchbar" type="text" placeholder="Поиск">
@@ -50,6 +51,7 @@
                     <a href="">Новинки</a>
                     <a href="">Книги</a>
                     <a href="">Канцтовары</a>
+                    <a href="">Скидки</a>
                 </div>
             </div>
         </div>
