--- a/html/registration.html
+++ b/html/registration.html
@@ -44,6 +44,7 @@
                 <a href="">Новинки</a>
                 <a href="">Книги</a>
                 <a href="">Канцтовары</a>
+                <a href="sales.html">Скидки</a>
             </div>
         </div>
     </div>
