--- a/html/sales.html
+++ b/html/sales.html
@@ -1,12 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Страница товара</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Bookshop</title>
     <link rel="stylesheet" href="../styles/styles.css" type="text/css"/>
     <link type="image/x-icon" href="/images/favicon.svg" rel="shortcut icon">
     <link type="Image/x-icon" href="/images/favicon.svg" rel="icon">
@@ -30,9 +26,7 @@
             </div>
             <input class="searchbar" type="text" placeholder="Поиск">
             <a href="registration.html"><img class="user_svg" src="../images/user.svg" alt="user"></a>
-            <div class="korzina">
-                <a href="../html/cart.html"><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
-            </div>
+            <a href="../html/cart.html"><img class="cart_svg" src="../images/cart.svg" alt="cart"></a>
         </div>
     </div>
     <div class="top">
@@ -57,13 +51,23 @@
 </header>
 <main>
     <div class="main-items">
-        <div class="page_name">Страница товара</div>
+        <div class="page_name">Скидки</div>
+        <div class="aktsii">
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/1e7/1e77bf787bddeb8edf8d8e7cd9075004/f5207fa36ed4d95b71f22de257958e8f.jpg" alt=""></div>
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/0ae/0aee91ebb1d55255d50947c02740f46c/5263db77f78a12bce9adf02d4764505d.jpg" alt=""></div>
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/c7f/c7f2d91dad7491ba3189a6329e64da2e/765923cdb43156ca88f976af3cec4bc4.jpg" alt=""></div>
+        </div>
+        <div>До новых акций:</div>
+        <div class="black-friday"></div>
+        <div class="timer">
+            <div class="timer__items">
+                <div class="timer__item timer__days">00</div>
+                <div class="timer__item timer__hours">00</div>
+                <div class="timer__item timer__minutes">00</div>
+                <div class="timer__item timer__seconds">00</div>
+            </div>
+        </div>
     </div>
-    <div class="my_item" id="item-page"></div>
-    </div>
-    <div id="test"></div>
-
-
 </main>
 <a class="back_to_top" title="Наверх">↑</a>
 <footer>
@@ -92,16 +96,8 @@
 
     </div>
 </footer>
+
 </body>
-<script src="../js/item.js"></script>
-<script src="../js/return_top.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+<script src="../js/timer.js"></script>
+<script src="js/script.js"></script>
 </html>
