--- a/html/item.html
+++ b/html/item.html
@@ -50,7 +50,7 @@
                 <a href="">Новинки</a>
                 <a href="">Книги</a>
                 <a href="">Канцтовары</a>
-                <a href="sales.html">Скидки</a>
+                <a href="sales.html">Акции</a>
             </div>
         </div>
     </div>
@@ -62,8 +62,6 @@
     <div class="my_item" id="item-page"></div>
     </div>
     <div id="test"></div>
-
-
 </main>
 <a class="back_to_top" title="Наверх">↑</a>
 <footer>
