--- a/html/sales.html
+++ b/html/sales.html
@@ -44,21 +44,15 @@
                 <a href="">Новинки</a>
                 <a href="">Книги</a>
                 <a href="">Канцтовары</a>
-                <a href="sales.html">Скидки</a>
+                <a href="sales.html">Акции</a>
             </div>
         </div>
     </div>
 </header>
 <main>
     <div class="main-items">
-        <div class="page_name">Скидки</div>
-        <div class="aktsii">
-            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/1e7/1e77bf787bddeb8edf8d8e7cd9075004/f5207fa36ed4d95b71f22de257958e8f.jpg" alt=""></div>
-            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/0ae/0aee91ebb1d55255d50947c02740f46c/5263db77f78a12bce9adf02d4764505d.jpg" alt=""></div>
-            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/c7f/c7f2d91dad7491ba3189a6329e64da2e/765923cdb43156ca88f976af3cec4bc4.jpg" alt=""></div>
-        </div>
+        <div class="page_name">Акции</div>
         <div>До новых акций:</div>
-        <div class="black-friday"></div>
         <div class="timer">
             <div class="timer__items">
                 <div class="timer__item timer__days">00</div>
@@ -66,6 +60,11 @@
                 <div class="timer__item timer__minutes">00</div>
                 <div class="timer__item timer__seconds">00</div>
             </div>
+        </div>
+        <div class="aktsii">
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/1e7/1e77bf787bddeb8edf8d8e7cd9075004/f5207fa36ed4d95b71f22de257958e8f.jpg" alt=""></div>
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/0ae/0aee91ebb1d55255d50947c02740f46c/5263db77f78a12bce9adf02d4764505d.jpg" alt=""></div>
+            <div class="sales_img"><img src="https://ndc.book24.ru/resize/2200x640/iblock/c7f/c7f2d91dad7491ba3189a6329e64da2e/765923cdb43156ca88f976af3cec4bc4.jpg" alt=""></div>
         </div>
     </div>
 </main>
