--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">Новинки</a></li>
                         <li><a href="#">Книги</a></li>
                         <li><a href="#">Канцтовары</a></li>
-                        <li><a href="html/sales.html">Скидки</a></li>
+                        <li><a href="html/sales.html">Акции</a></li>
                     </ul>
                 </div>
                 <input class="searchbar" type="text" placeholder="Поиск">
@@ -49,7 +49,7 @@
                     <a href="">Новинки</a>
                     <a href="">Книги</a>
                     <a href="">Канцтовары</a>
-                    <a href="html/sales.html">Скидки</a>
+                    <a href="html/sales.html">Акции</a>
                 </div>
             </div>
         </div>
