--- a/html/author.html
+++ b/html/author.html
@@ -44,7 +44,7 @@
                 <a href="">Новинки</a>
                 <a href="">Книги</a>
                 <a href="">Канцтовары</a>
-                <a href="sales.html">Скидки</a>
+                <a href="sales.html">Акции</a>
             </div>
         </div>
     </div>
